# emerald

./: .bochsrc  .gitattributes  .gitignore  .gitmodules  Doxyfile  LICENSE  Makefile  README.md  compile_flags.txt  grub.cfg  kernel  kernel.asm  kernel.c  kernel.elf  kernel.h  keyboard_map.h  limine.cfg  link.ld  run.sh
.github/workflows/: doc.yml  tests.yml
docs/: build-guide.md  install.md
docs/doxy/: main.css
kernel/: ascii.h  link.ld  main.c  main.h  meson.build
kernel/boot/: boot.c  boot.h  stivale2.c
kernel/devices/ahci/: ahci.c  ahci.h
kernel/devices/keyboard/: keyboard.c  keyboard.h
kernel/devices/pci/: PCI.c  PCI.h  pci_id.c  pci_id.h
kernel/devices/pcspkr/: pcspkr.c  pcspkr.h
kernel/devices/rtc/: rtc.c  rtc.h
kernel/devices/serial/: serial.c  serial.h
kernel/devices/video/: font.asm  font.h  framebuffer.c  framebuffer.h  vbe.c  vbe.h
kernel/memory/: pmm.c  pmm.h  vmm.c  vmm.h
kernel/meson/: args.txt  asmfiles.sh  meson.build
kernel/system/: GDT.c  GDT.h  panic.c  panic.h  system.asm
kernel/system/interrupts/: IDT.c  IDT.h  PIT.c  PIT.h  exceptions.c  exceptions.h
kutils/: cliutils.h  kbutils.h
lib/libasm/: asm.c  asm.h
lib/libint/: int.c  int.h
lib/libstr/: string.c  string.h
libk/: libk.c  libk.h
libk/liballoc/: alloc.c  alloc.h
libk/libasm/: asm.c  asm.h
libk/libint/: int.c  int.h
libk/libstr/: string.c  string.h
libraries/libegl/: egl.c  egl.h
libraries/libgraphic/: fb_font.asm  fb_font.psf  framebuffer.c  framebuffer.h  psf.h
libraries/libk/: alloc.c  alloc.h  bitmap.c  bitmap.h  io.c  io.h  logging.c  logging.h  module.h  random.c  random.h  string.c  string.h  vec.h
libraries/libk/graphics/: fb_font.asm  framebuffer.c  framebuffer.h
libraries/libk/time/: chrono.c  chrono.h  time.c  time.h
manual/: build-guide.md
meta/: rr.py
meta/scripts/: make-image.sh
meta/tools/: new.py
scripts/development/: clang-format.sh
scripts/meson/: asmfiles.sh  cfiles.sh
src/: ascii.h  kernel.asm  link.ld  main.c  main.cpp  stivale.h
src/boot/: boot.c  boot.h
src/debug-utilities/: logger.c  logger.h
src/devices/RTC/: rtc.c  rtc.h
src/devices/keyboard/: kbutils.h  keyboard.c  keyboard.h  keyboard_map.h
src/devices/serial/: serial.c  serial.h
src/devices/video/: colors.h  vga.c  vga.h
src/firmware/: bios.asm  bios.c  bios.h
src/firmware/bios/: bios.c  firmware.asm  firmware.asm~
src/inc/: stivale.h  stivale2.h  string.c  string.h
src/include/: idt.h
src/kernel/: main.c  main.h  syscall.c  syscall.h  tinyubsan.c  user.asm  user.c
src/kernel/arch/: arch.c  arch.h  asm.c  asm.h  context.c  context.h  cpuid.c  cpuid.h  gdt.c  gdt.h  lock.asm  tasking.c  tasking.h  user.c  user.h
src/kernel/boot/: boot.c  boot.h  stivale2.h
src/kernel/devices/: apic.c  apic.h  com.c  com.h  fb.c  fb.h  pci.c  pci.h  pic.c  pic.h  pit.c  pit.h
src/kernel/fw/: acpi.c  acpi.h
src/kutils/: cliutils.h  kbutils.h
src/lib/: .build.mk
src/lib/emerald/: alloc.c  alloc.h  debug.c  debug.h  either.h  functional.h  io.h  log.c  log.h  macros.h  maybe.h  mem.c  mem.h  result.h  std.h  str.h  types.h
src/lib/syscalls/: syscalls.c  syscalls.h
src/mem/: pmm.c  pmm.h  vmm.c  vmm.h
src/mem/physical/: pmm.c  pmm.h
src/mem/virtual/: vmm.c  vmm.h
src/proc/: PIT.c  PIT.h  lock.h  scheduling.c  scheduling.h  task.c  task.h  task_asm.asm
src/root/: limine.cfg
src/sys/: exceptions.c  exceptions.h  gdt.c  gdt.h  idt.c  idt.h
src/tests/: Makefile  bitmap_test.c  either_test.c  fmt_test.c  maybe_test.c  test  test.c  vec_test.c
(+50 files in other folders)
